# gestor_proyectos

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: pr-titles.yaml  quality-check.yaml
.pytest_cache/v/cache/: lastfailed  nodeids
app/api/: tasks_router.py
app/schemas/: task_schema.py
app/tests/: test_task.py
deployment/docker/: Aptfile  Dockerfile
scripts/: environment.sh  shell.sh
src/: alembic.ini  app.py  main.py  manage.py
src/api/: tasks_router.py
src/api/errors/: error_template.py  task_error.py
src/api/routers/: tasks_router.py
src/config/: settings.py
src/controller/: task_controller.py
src/database/: connection.py
src/database/migrations/: env.py  script.py.mako
src/database/migrations/versions/: 20241030_new_model_d87a59fb8f8a.py  20241031_user_model_c28cb6f72101.py
src/deployment/docker/: Dockerfile
src/models/: task_model.py  user_model.py
src/schemas/: task_schema.py
src/services/: task_service.py
src/tests/: conftest.py  task_test.py  test_task.py
src/tools/: custom_logger.py
src/utilities/: modules.py
